static/style.css
/*	Settings for everything //within// the body tags*/
body {
	background-color: #1a1a1a;
	color: white;
	font-family: sans-serif;
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
	margin: 0;
}

/*	Creating the style for the container in center of the screen*/
.app-container {
	text-align: center;
	padding: 40px;
	border: 2px solid #0000ff;
	border-radius: 15px;
	background-color: #2a2a2a;
	box-shadow: 0 0 20px rgba(0, 0, 255, 0.2);
	}

.success {
	border-color: #00ff00;
	box-shadow: 0 0 30px rgba(0, 255, 0, 0.4);
}

.error {
	border-color: #ff0000;
	box-shadow: 0 0 30px rgba(255, 0, 0, 0.4);
}

/*	Styling for buttons as a whole*/
.button-stack {
	display: flex;
	flex-direction: row;
	gap: 50px;
	margin-top: 20px;
}

/*	Styling for individual buttons*/
.dash-btn, button {
    text-decoration: none;
    color: white;
    cursor: pointer;
    padding: 15px 30px;
    border: 2px solid #00d4ff;
    background-color: #1a1a1a;
    transition: 0.3s;
    font-weight: bold;
    box-shadow: 0 0 10px rgba(0, 212, 255, 0.2);
}

.dash-btn:hover {
	background-color: #00d4ff;
	color: #1a1a1a;
	box-shadow: 0 0 20px rgba(0, 212, 255, 0.6);
	transform: translateY(-2px)
}

